TAG: pgsnpdbschema-6-0-4-1
DATE: 06/16/2016
STAFF: lec
CHANGES: 
1) convert to git

TAG: pgsnpdbschema-6-0-3-1
DATE: 02/06/2061
STAFF: sc
CHANGES: Project Florida

TAG: pgsnpdbschema-6-0-1-6
DATE: 12/21/2015
STAFF: sc
CHANGES: Project Florida
1) comment changes based on team review.

TAG: pgsnpdbschema-6-0-1-5
DATE: 12/17/2015
STAFF: sc
CHANGES: Project Florida
1) snp schema documentation comments directory and scripts
2) removed MGI_Tables scripts
3) created all_create_comments.csh
4) added call to comment script in each table create script
5) renamed reconfig.csh to reconfig.sh
6) Install - added linking to Configuration in comments directory
7) all_create.csh/all_drop.csh - call to *create.sh changed to *create.object 
8) fix.sh removed
9) objectCounter.sh - removed trigger and procedure directories

TAG: pgsnpdbschema-6-0-1-4
DATE: 11/21/2015
STAFF: sc
CHANGES: Project Florida
1) Remove SNP_RefSeq_Acession scripts
2) add SNP_Transcript_Protein scripts

TAG: pgsnpdbschema-6-0-1-3
DATE: 11/11/2015
STAFF: sc
CHANGES: Project Florida
1) Move clustering from end of index scripts to just after the index creation
2) Change snp_consensussnp_marker clustered index to just the _consensusSnp_key (From:
    (_marker_key, _fxn_key, _consensussnp_key)

TAG: pgsnpdbschema-6-0-1-2
DATE: 11/10/2015
STAFF: sc
CHANGES: Project Florida
1) SNP_RefSeq_Accession scripts

TAG: pgsnpdbschema-6-0-1-1
DATE: 11/09/2015
STAFF: sc
CHANGES: Project Florida
1) SNP_ConsensusSnp_StrainAllele.allele and DP_SNP_Marker.contigAllele
   changed from character varying (50) to text
2) SNP_ConsensusSnp_Marker - added distance_from and distance_direction
3) removed snp_summary_view and all references to views (this was only view)
4) updated several scripts to remove reference to view
 -  all_create, all_drop, Install, reconfig, objectCounter
5) Added table, keys index for new table SNP_RefSeq_Accession
6) added accid index on DP_SNP_Marker

TAG: pgsnpdbschema-6-0-0-1
DATE: 07/28/2015
STAFF: lec
CHANGES: