@@ -14,7 +14,6 @@ cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
 create index DP_SNP_Marker_idx_entrezGeneId on snp.DP_SNP_Marker (entrezGeneId);
 
-
 create index DP_SNP_Marker_idx_fxnClass on snp.DP_SNP_Marker (_Fxn_key);
 
 create index DP_SNP_Marker_idx_accID on snp.DP_SNP_Marker (accID);
