@@ -17,12 +17,6 @@ cd `dirname $0` && . ./Configuration
 
 cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
-create index SNP_Accession_idx_clustered on snp.SNP_Accession (_Object_key);
-
-
-CLUSTER snp.SNP_Accession USING SNP_Accession_idx_clustered;
-
-
 create index SNP_Accession_idx_Object_MGIType_key on snp.SNP_Accession (_Object_key, _MGIType_key);
 
 
