@@ -13,9 +13,6 @@ cd `dirname $0` && . ./Configuration
 
 cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
-drop index if exists snp.SNP_Accession_idx_clustered
-;
-
 drop index if exists snp.SNP_Accession_idx_Object_MGIType_key
 ;
 
