@@ -12,14 +12,9 @@ cd `dirname $0` && . ./Configuration
 
 cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
-create index SNP_Coord_Cache_idx_clustered on snp.SNP_Coord_Cache(chromosome, startCoordinate);
-
-
-CLUSTER snp.SNP_Coord_Cache USING SNP_Coord_Cache_idx_clustered;
-
+create index SNP_Coord_Cache_idx_chromStartCoord on snp.SNP_Coord_Cache(chromosome, startCoordinate);
 
 create index SNP_Coord_Cache_idx_ConsensusSnp_key on snp.SNP_Coord_Cache (_ConsensusSnp_key);
-
 
 create index SNP_Coord_Cache_idx_varClass_key on snp.SNP_Coord_Cache (_varClass_key);
 
