@@ -12,8 +12,6 @@ cd `dirname $0` && . ./Configuration
 
 cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
-create index SNP_Flank_idx_clustered on snp.SNP_Flank (_ConsensusSnp_key, sequenceNum);
-
-CLUSTER snp.SNP_Flank USING SNP_Flank_idx_clustered;
+create index SNP_Flank_idx_ConsensusSnp_key on snp.SNP_Flank (_ConsensusSnp_key, sequenceNum);
 
 EOSQL
