@@ -12,7 +12,7 @@ cd `dirname $0` && . ./Configuration
 
 cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
-drop index if exists snp.SNP_Flank_idx_clustered
+drop index if exists snp.SNP_Flank_idx_ConsensusSnp_key
 ;
 
 EOSQL
