@@ -14,9 +14,6 @@ cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
 create index SNP_Population_idx_SubHandle_key on snp.SNP_Population (_SubHandle_key);
  
-
 create index SNP_Population_idx_name on snp.SNP_Population (name);
-
-
 
 EOSQL
