@@ -13,7 +13,7 @@ cd `dirname $0` && . ./Configuration
 
 cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
-drop index if exists snp.SNP_Strain_idx_clustered
+drop index if exists snp.SNP_Strain_idx_mgdStrain_key
 ;
 
 drop index if exists snp.SNP_Strain_idx_strain
