@@ -12,7 +12,7 @@ cd `dirname $0` && . ./Configuration
 
 cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
-drop index if exists snp.SNP_SubSnp_StrainAllele_idx_clustered
+drop index if exists snp.SNP_SubSnp_StrainAllele_idx_SubSnp_key
 ;
 
 drop index if exists snp.SNP_SubSnp_StrainAllele_idx_Strain_key
