@@ -12,9 +12,6 @@ cd `dirname $0` && . ./Configuration
 
 cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
-
-create index SNP_Transcript_Protein_idx_clustered on snp.SNP_Transcript_Protein (transcriptID, proteinID);
-
-CLUSTER snp.SNP_Transcript_Protein USING SNP_Transcript_Protein_idx_clustered;
+create index SNP_Transcript_Protein_idx_transcript_protein on snp.SNP_Transcript_Protein (transcriptID, proteinID);
 
 EOSQL
