@@ -14,11 +14,9 @@ cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
 ALTER TABLE snp.SNP_Strain ADD PRIMARY KEY (_snpStrain_key);
 
-
-ALTER TABLE snp.SNP_ConsensusSnp_StrainAllele ADD FOREIGN KEY (_mgdStrain_key) REFERENCES snp.SNP_Strain(_mgdStrain_key) ON DELETE CASCADE;
-
-
-ALTER TABLE snp.SNP_SubSnp_StrainAllele ADD FOREIGN KEY (_mgdStrain_key) REFERENCES snp.SNP_Strain(_mgdStrain_key) ON DELETE CASCADE;
+--since SNP_Strain(_mgdStrain_key) is non-unique, this foreign key cannot be made
+--ALTER TABLE snp.SNP_ConsensusSnp_StrainAllele ADD FOREIGN KEY (_mgdStrain_key) REFERENCES snp.SNP_Strain(_mgdStrain_key) ON DELETE CASCADE;
+--ALTER TABLE snp.SNP_SubSnp_StrainAllele ADD FOREIGN KEY (_mgdStrain_key) REFERENCES snp.SNP_Strain(_mgdStrain_key) ON DELETE CASCADE;
 
 
 EOSQL
